// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@hendotcat/elements@0.0.0 <Document /> renders <Body> children as body contents 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Document /> renders a valid document given the bare minimum input 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body></body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Document /> renders custom header metadata 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
  </head>
  <body></body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Document /> treats bare children as body contents 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Heading /> allows heading level changes of up to 1 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body>
    <h1>one</h1>
    <h2>two</h2>
    <h3>three</h3>
    <h4>four</h4>
    <h5>five</h5>
    <h6>six</h6>
    <h5>five</h5>
    <h4>four</h4>
    <h3>three</h3>
    <h2>two</h2>
    <h1>one</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Heading /> excludes lang attribute if same as document 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Heading /> includes lang attribute if different from document 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body>
    <h1 lang=\\"sv-SE\\">titel</h1>
  </body>
</html>
"
`;

exports[`@hendotcat/elements@0.0.0 <Heading /> rejects heading level changes of more than 1 1`] = `"Heading level 3 not allowed: previous level is 1"`;

exports[`@hendotcat/elements@0.0.0 <Heading /> renders a <h1> by default 1`] = `
"
<html lang=\\"en-US\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title>test</title>
  </head>
  <body>
    <h1>title</h1>
  </body>
</html>
"
`;
